# BreakOut

./: CMakeLists.txt  README.md  glad.c  main.cpp
application/: BallObject .h  BallObject.cpp  CMakeLists.txt  Game.cpp  Game.h  GameLevel.cpp  GameLevel.h  GameObject.cpp  GameObject.h  Particle.cpp  Particle.h  PostProcessor.cpp  PostProcessor.h  PowerUp.h  SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  TextRenderer.h
assets/shaders/: particle.vs  post_processing.vs  sprite.fs  sprite.vs
loader/: CMakeLists.txt  Loader.cpp  Loader.h  Texture.cpp  Texture.h  shader.cpp  shader.h
